 14 - Programação da classe AplicaçãoMVC (realizando)
 15 - Programação da classe HomeController (realizando)
 16 - Pasta sistemaphp/classes/controller armazena classes utilizadas pelo controller
 16 - Pasta sistemaphp/classes/model armazena classes utilizadas pelo model
 17 - Programação da classe PrincipalController (realizando)
 19 - Adição das bibliotecas do bootstrap
 20 - Exclusão da pasta de classes/banco

Versão 0.6 - 4/11/2017

 1 - Programar classe categoria (realizando)
 2 - Programação da classe AplicaçãoMVC (realizando)
 3 - Programação da classe HomeController (realizando)
 4 - Programação da classe PrincipalController (realizando)
 5 - Inclusão das Views Produto e Categorias

Versão 0.7 - 06/11/2017

 1 - Mudanças radicais no desenvolvimento do projeto.

    O objetivo deste trabalho é ensinar de forma simples o conceito de MVC e ao mesmo tempo utilizando as informações repassadas aos 
    alunos durante o curso de PHP que foi ministrado ao longo do semestre. Criar Uma aplicação usando arquitetura MVC, CRUD e Orientação
    a objetos no PHP sem uso de frameworks PHP prontos

    Os diretórios que serão utilizados por este projeto, foram simplificados a fim de ajudar o aluno a se concentrar nos objetivos das classes.
    Em uma aplicação no mundo real, há uma quantidade muito maior de pastas. Todavia, se neste projeto, fossemos entrar nestes detalhes,
    talvez tornaria o procedimento mais complexo para o momento. Talvez, para quem já teve contato com frameworks completos,
    como por exemplo Laravel, não concodará com a simplificada divisão de pastas seguintes. Mas, o conteúdo é apenas didático.
    O trabalho é didático para os que os alunos alcançem um nível maior de desenvolvimento, um passo de cada vez.

 2 - 3 telas principais do sistema adicionadas

Versão 0.8 - 11/12/2017

 1 - Programação base do sistema realizada


        NÃO ESQUECER DE REVISAR TODA A DOCUMENTAÇÃO AO FINAL DA PROGRAMAÇÃO DO PROJETO