@@ -6,7 +6,7 @@
     </div>
 </div>
 
-<form action="#" method="post">
+<form action="<?php echo LINK_CATEGORIAS_INSERIDO ?>" method="post">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="form-group">
