@@ -93,5 +93,9 @@ Versão 0.8 - 11/12/2017
 
  1 - Programação base do sistema realizada
 
+Versão 0.9 - ?/11/2017
+
+ 1 - Programando Editar Categorias
+
 
         NÃO ESQUECER DE REVISAR TODA A DOCUMENTAÇÃO AO FINAL DA PROGRAMAÇÃO DO PROJETO
